# spco_mlda_problog_related

./: CMakeLists.txt  README.md  package.xml
data/: 3LDK_01_W_1_0.csv  3LDK_01_pi_1_0.csv  3LDK_01_w_index_1_0.csv  Pdw[1].txt  mu5.csv  sig5.csv  word_dic.txt  xi16.csv  xi5.csv
launch/: human_commander.launch
src/: __init__.py  cross_modal_object2place.py  human_commander.py  weight_average.py
src/nouse/: cross_modal_object2place_copy.py
